<resources>
    <string name="app_name">AnimeApp</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="rating">Rating: %1$s</string>
    <string name="about">About</string>
    <string name="thumbnail_anime">Thumbnail Anime</string>
    <string name="share_anime">Share Anime</string>
    <string name="synopsis_this_anime">Synopsis this anime</string>
    <string name="photo_profile">Photo Profile</string>
    <string name="nama">Muammar Ramadhani Maulizidan</string>
    <string name="email">09031282227065@student.unsri.ac.id</string>
    <string name="anime_title">Anime Title</string>
    <string-array name="anime_titles">
        <item>Attack on Titan</item>
        <item>My Hero Academia</item>
        <item>Demon Slayer: Kimetsu no Yaiba</item>
        <item>No Game No Life</item>
        <item>Frieren: After The End</item>
        <item>Jujutsu Kaisen</item>
        <item>Kapten Tsubasa</item>
        <item>Hyōka</item>
        <item>Charlotte</item>
        <item>Konosuba</item>
    </string-array>
</resources>