<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgDetailPhoto"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/thumbnail_anime"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="parent"
            android:background="?attr/colorOutline"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvDetailTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/imgDetailPhoto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp"
            android:text="@string/anime_title" />

        <TextView
            android:id="@+id/tvDetailRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textStyle="italic"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailTitle"
            android:text="@string/rating" />

        <TextView
            android:id="@+id/tvDetailSynopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintTop_toBottomOf="@id/tvDetailRating"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp"
            android:text="@string/synopsis_this_anime" />

        <Button
            android:id="@+id/action_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/share_anime"
            app:layout_constraintEnd_toEndOf="parent"
            app:backgroundTint="?attr/colorPrimary"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintTop_toBottomOf="@id/tvDetailSynopsis" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
